@@ -5,6 +5,10 @@ plugins {
 
 description = "An action sequencer to do the boring tasks on the game http://www.riseoflords.com."
 
+val command = "rolAutomizer"
+val moduleName by extra("org.hildan.rol.automizer")
+val javaHome = System.getProperty("java.home")
+
 application {
     mainClass.set("org.hildan.bots.riseoflords.RolAutomizerKt")
 }
@@ -27,11 +31,31 @@ dependencies {
     implementation("javax.mail:mail:1.4.3") // to send emails with logback
 }
 
-// to build a fat jar with all dependencies included
-tasks.jar {
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
-    manifest { attributes["Main-Class"] = application.mainClass.get() }
-    from({
-        configurations.runtimeClasspath.get().map { if (it.isDirectory) it else zipTree(it) }
-    })
+tasks {
+    compileJava {
+        inputs.property("moduleName", moduleName)
+        options.javaModuleMainClass.set("org.hildan.bots.riseoflords.RolAutomizerKt")
+        options.compilerArgs = listOf(
+            "--patch-module", "$moduleName=${sourceSets.main.get().output.asPath}"
+        )
+    }
+
+    val jlink by registering(Exec::class) {
+        val outputDir by extra("$buildDir/jlink")
+        inputs.files(configurations.runtimeClasspath)
+        inputs.files(jar)
+        outputs.dir(outputDir)
+        doFirst {
+            val modulePath = files(jar) + configurations.runtimeClasspath.get()
+            logger.lifecycle(modulePath.joinToString("\n", "jlink module path:\n"))
+            delete(outputDir)
+            commandLine("$javaHome/bin/jlink",
+                "--module-path",
+                listOf("$javaHome/jmods/", modulePath.asPath).joinToString(File.pathSeparator),
+                "--add-modules", moduleName,
+                "--output", outputDir,
+                "--launcher", "$command=$moduleName"
+            )
+        }
+    }
 }
